--- a/css/main.css
+++ b/css/main.css
@@ -1166,6 +1166,12 @@ pre .javascript .function,pre .keyword{
     font-weight:400;
     line-height:inherit
 }
+.posts-collapse .post-title4{
+    margin-left:10px;
+    font-size:16px;
+    font-weight:400;
+    line-height:inherit
+}
 
 .posts-collapse .post-title::after{
     margin-left:3px;
